--- a/bert/0_data_extract.ipynb
+++ b/bert/0_data_extract.ipynb
@@ -380,7 +380,9 @@
     }
    ],
    "source": [
-    "df.head()"
+    "# 전체 데이터셋 \n",
+    "with open('../../data/bert_df.pkl', 'wb') as f:\n",
+    "    pickle.dump(df, f)"
    ]
   },
   {
@@ -404,343 +406,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 전체 데이터셋 \n",
-    "with open('../../data/bert_df.pkl', 'wb') as f:\n",
-    "    pickle.dump(df, f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 파일 불러오기\n",
-    "with open('../../data/bert_df.pkl', 'rb') as f:\n",
-    "    df = pickle.load(f)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 3487 entries, 0 to 3486\n",
-      "Data columns (total 28 columns):\n",
-      " #   Column              Non-Null Count  Dtype         \n",
-      "---  ------              --------------  -----         \n",
-      " 0   q_id                3487 non-null   int64         \n",
-      " 1   q_posttypeid        3487 non-null   object        \n",
-      " 2   q_acceptedanswerid  1488 non-null   float64       \n",
-      " 3   q_parentid          0 non-null      object        \n",
-      " 4   q_creationdate      3487 non-null   datetime64[ns]\n",
-      " 5   q_score             3487 non-null   int64         \n",
-      " 6   q_viewcount         3487 non-null   int64         \n",
-      " 7   q_owneruserid       3487 non-null   int64         \n",
-      " 8   q_title             3487 non-null   object        \n",
-      " 9   q_tags              3487 non-null   object        \n",
-      " 10  q_answercount       3487 non-null   int64         \n",
-      " 11  q_commentcount      3487 non-null   int64         \n",
-      " 12  q_reputation        3487 non-null   int64         \n",
-      " 13  q_text              3487 non-null   object        \n",
-      " 14  a_id                3487 non-null   int64         \n",
-      " 15  a_posttypeid        3487 non-null   object        \n",
-      " 16  a_acceptedanswerid  0 non-null      object        \n",
-      " 17  a_parentid          3487 non-null   int64         \n",
-      " 18  a_creationdate      3487 non-null   datetime64[ns]\n",
-      " 19  a_score             3487 non-null   int64         \n",
-      " 20  a_viewcount         0 non-null      object        \n",
-      " 21  a_owneruserid       3487 non-null   int64         \n",
-      " 22  a_title             0 non-null      object        \n",
-      " 23  a_tags              0 non-null      object        \n",
-      " 24  a_answercount       0 non-null      object        \n",
-      " 25  a_commentcount      3487 non-null   int64         \n",
-      " 26  a_reputation        3487 non-null   int64         \n",
-      " 27  a_text              3487 non-null   object        \n",
-      "dtypes: datetime64[ns](2), float64(1), int64(13), object(12)\n",
-      "memory usage: 762.9+ KB\n"
+     "ename": "NameError",
+     "evalue": "name 'psycopg2' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m conn \u001b[38;5;241m=\u001b[39m \u001b[43mpsycopg2\u001b[49m\u001b[38;5;241m.\u001b[39mconnect(host \u001b[38;5;241m=\u001b[39m conf\u001b[38;5;241m.\u001b[39mdatabase_user[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhost\u001b[39m\u001b[38;5;124m'\u001b[39m], dbname\u001b[38;5;241m=\u001b[39mconf\u001b[38;5;241m.\u001b[39mdatabase_user[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdbname\u001b[39m\u001b[38;5;124m'\u001b[39m], user\u001b[38;5;241m=\u001b[39mconf\u001b[38;5;241m.\u001b[39mdatabase_user[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124muser\u001b[39m\u001b[38;5;124m'\u001b[39m], password\u001b[38;5;241m=\u001b[39mconf\u001b[38;5;241m.\u001b[39mdatabase_user[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpassword\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m      3\u001b[0m     cur \u001b[38;5;241m=\u001b[39m conn\u001b[38;5;241m.\u001b[39mcursor()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'psycopg2' is not defined"
      ]
     }
    ],
    "source": [
-    "df.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# extract the  columns for text analysis\n",
-    "## q_body : question body\n",
-    "## a_body : answer body\n",
-    "df_q = df[['q_id','q_text']].drop_duplicates()\n",
-    "df_a = df[['a_id','a_text']].drop_duplicates()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def cleanhtml(raw_html):\n",
-    "  # 1.Source code in python language is hard to understand, so replace all the <code> tag first\n",
-    "  cleantext_1 = re.findall(r'(?<=\\<code>)(.*?)(?=<\\/code>)', raw_html.replace('\\n', '_**_'))\n",
-    "  cleantext_1 = [x.replace('_**_', '\\n') for x in cleantext_1]\n",
-    "  # 2. replace html tags\n",
-    "  # <p>\n",
-    "  tag_re = re.compile('<.*?>')\n",
-    "  cleantext_2 = [re.sub(tag_re, '', x) for x in cleantext_1]\n",
-    "  return cleantext_2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# apply the function, cleanhtml to the question and body text\n",
-    "df_q.loc[:, 'q_prep_text'] = df_q['q_text'].apply(cleanhtml)\n",
-    "df_a.loc[:, 'a_prep_text'] = df_a['a_text'].apply(cleanhtml)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_q = df_q.reset_index(drop=True)\n",
-    "df_a = df_a.reset_index(drop=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>q_id</th>\n",
-       "      <th>q_text</th>\n",
-       "      <th>q_prep_text</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>77593805</td>\n",
-       "      <td>&lt;p&gt;If we add number  from 1 to 6 we have to ad...</td>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>77593717</td>\n",
-       "      <td>&lt;pre&gt;&lt;code&gt;import hashlib\\n\\nuser_hash_dict = ...</td>\n",
-       "      <td>[import hashlib\\n\\nuser_hash_dict = {}\\n\\nwith...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>77591118</td>\n",
-       "      <td>&lt;p&gt;I have a Pandas Series with the names of ci...</td>\n",
-       "      <td>[London:Alpha\\nLondon\\nLondon:Beta\\nLondon:Del...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>77590853</td>\n",
-       "      <td>&lt;p&gt;Nmap API is written in Python and &lt;code&gt;-v,...</td>\n",
-       "      <td>[-v, -o, -A, --script, -Pn, -IL]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>77591142</td>\n",
-       "      <td>&lt;p&gt;I want to take a input of a string and want...</td>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2576</th>\n",
-       "      <td>77575452</td>\n",
-       "      <td>&lt;p&gt;I have many images from a high-speed camera...</td>\n",
-       "      <td>[import cv2\\nimport numpy as np\\nfrom matplotl...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2577</th>\n",
-       "      <td>77581957</td>\n",
-       "      <td>&lt;p&gt;I'm probably making a stupid mistake, but h...</td>\n",
-       "      <td>[import seaborn as sns\\nfrom scipy.stats impor...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2578</th>\n",
-       "      <td>77581848</td>\n",
-       "      <td>&lt;p&gt;I am trying to use Pandas to transform a df...</td>\n",
-       "      <td>[data = {'Account': ['A', 'A', 'A', 'A', 'A', ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2579</th>\n",
-       "      <td>77567490</td>\n",
-       "      <td>&lt;p&gt;I'm creating a local API for macOS that pro...</td>\n",
-       "      <td>[onnxruntime-silicon, onnxruntime, Flask, # Se...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2580</th>\n",
-       "      <td>77582066</td>\n",
-       "      <td>&lt;p&gt;I have two data sets. One contains 3 ish mi...</td>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2581 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          q_id                                             q_text  \\\n",
-       "0     77593805  <p>If we add number  from 1 to 6 we have to ad...   \n",
-       "1     77593717  <pre><code>import hashlib\\n\\nuser_hash_dict = ...   \n",
-       "2     77591118  <p>I have a Pandas Series with the names of ci...   \n",
-       "3     77590853  <p>Nmap API is written in Python and <code>-v,...   \n",
-       "4     77591142  <p>I want to take a input of a string and want...   \n",
-       "...        ...                                                ...   \n",
-       "2576  77575452  <p>I have many images from a high-speed camera...   \n",
-       "2577  77581957  <p>I'm probably making a stupid mistake, but h...   \n",
-       "2578  77581848  <p>I am trying to use Pandas to transform a df...   \n",
-       "2579  77567490  <p>I'm creating a local API for macOS that pro...   \n",
-       "2580  77582066  <p>I have two data sets. One contains 3 ish mi...   \n",
-       "\n",
-       "                                            q_prep_text  \n",
-       "0                                                    []  \n",
-       "1     [import hashlib\\n\\nuser_hash_dict = {}\\n\\nwith...  \n",
-       "2     [London:Alpha\\nLondon\\nLondon:Beta\\nLondon:Del...  \n",
-       "3                      [-v, -o, -A, --script, -Pn, -IL]  \n",
-       "4                                                    []  \n",
-       "...                                                 ...  \n",
-       "2576  [import cv2\\nimport numpy as np\\nfrom matplotl...  \n",
-       "2577  [import seaborn as sns\\nfrom scipy.stats impor...  \n",
-       "2578  [data = {'Account': ['A', 'A', 'A', 'A', 'A', ...  \n",
-       "2579  [onnxruntime-silicon, onnxruntime, Flask, # Se...  \n",
-       "2580                                                 []  \n",
-       "\n",
-       "[2581 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_q"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_q_src = df_q[['q_id', 'q_prep_text']].apply(pd.Series.explode)\n",
-    "df_a_src = df_a[['a_id', 'a_prep_text']].apply(pd.Series.explode)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_q_src['q_prep_text'] = df_q_src['q_prep_text'].str.split('\\n')\n",
-    "df_a_src['a_prep_text'] = df_a_src['a_prep_text'].str.split('\\n')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_q_src.dropna(inplace=True)\n",
-    "df_a_src.dropna(inplace=True)\n",
-    "df_q = df_q.reset_index(drop=True)\n",
-    "df_a = df_a.reset_index(drop=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "0\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(df_q_src['q_prep_text'].isna().sum())\n",
-    "print(df_a_src['a_prep_text'].isna().sum())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_q_src['q_prep_text'] = df_q_src['q_prep_text'].apply(lambda x : [xx.lstrip().rstrip() for xx in x])\n",
-    "df_a_src['a_prep_text'] = df_a_src['a_prep_text'].apply(lambda x : [xx.lstrip().rstrip() for xx in x])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 전체 데이터셋 \n",
-    "with open('../../data/q_src_df.pkl', 'wb') as f:\n",
-    "    pickle.dump(df_q_src, f)\n",
+    "conn = psycopg2.connect(host = conf.database_user['host'], dbname=conf.database_user['dbname'], user=conf.database_user['user'], password=conf.database_user['password'])\n",
+    "try:\n",
+    "    cur = conn.cursor()\n",
+    "    cur.execute(\"\\\n",
+    "select a.q_id, a.a_id, a.q_creationdate, c.tags, b.body \\\n",
+    "  from tt_qna_240506 a \\\n",
+    "     , postsbody b \\\n",
+    "     , posts c \\\n",
+    "where a.q_id = b.id \\\n",
+    "  and a.q_id = c.id \\\n",
+    "; \\\n",
+    "                \" \n",
+    "   )\n",
+    "    rows = cur.fetchall()\n",
+    "    \n",
     "\n",
-    "with open('../../data/a_src_df.pkl', 'wb') as f:\n",
-    "    pickle.dump(df_a_src, f)"
+    "except psycopg2.DatabaseError as db_err:\n",
+    "    print(db_err)\n",
+    "finally : \n",
+    "  cur.close()"
    ]
   },
   {
@@ -748,7 +449,52 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = pd.DataFrame(rows, columns = [\n",
+    "  'q_id' \n",
+    ", 'a_id' \n",
+    ", 'q_creationdate'\n",
+    ", 'tags' \n",
+    ", 'body' \n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 전체 데이터셋 \n",
+    "with open('../../data/bert_src_df.pkl', 'wb') as f:\n",
+    "    pickle.dump(df, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create table tt_qna_240506 as\n",
+    "# select \n",
+    "#                   x.q_id \n",
+    "#                 , x.q_creationdate \n",
+    "#                 , b.id               as a_id \n",
+    "#   from ( \n",
+    "#            select a.id               as q_id \n",
+    "#                 , a.creationdate     as q_creationdate \n",
+    "#            from posts a \n",
+    "#               , users c \n",
+    "#           where a.creationdate between '2020-11-01' and '2023-11-30' \n",
+    "#              and a.posttypeid = '1' \n",
+    "#              and a.owneruserid is not null \n",
+    "#              and c.id = a.owneruserid \n",
+    "#        )   x \n",
+    "# LEFT JOIN posts b ON \n",
+    "# \tx.q_id = b.parentid \n",
+    "# ;"
+   ]
   }
  ],
  "metadata": {
