--- a/bert/1_test.ipynb
+++ b/bert/1_test.ipynb
@@ -710,17 +710,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ChatCompletionMessage(content=\"In the realm of code where functions play,\\nA concept dwells to light the way.\\nRecursion dances, a loop sublime,\\nA mystical spell through space and time.\\n\\nLike echoes in a vast cavern's hall,\\nRecursive functions heed the call.\\nThey call themselves, a mirror's trance,\\nRepeating steps in a graceful dance.\\n\\nThink of a tree with branches wide,\\nEach branch a call to another side.\\nA function calling itself to explore,\\nA recursive journey, forevermore.\\n\\nAs a tale within a tale unfolds,\\nRecursion's magic creation molds.\\nA loop of mystery, elegant and clear,\\nUnraveling problems far and near.\\n\\nYet beware, as dangers lurk unseen,\\nInfinite loops can be quite mean.\\nBase case, the anchor to the shore,\\nGuide the recursion, and run no more.\\n\\nSo in the land of code and quest,\\nRecursion shines as a noble guest.\\nA poetic loop, a symphony grand,\\nIn the programmer's skilled hand.\", role='assistant', function_call=None, tool_calls=None)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from openai import OpenAI\n",
+    "client = OpenAI(api_key = 'sk-proj-Mm0FIOmjCUgXc2T40TarT3BlbkFJ7YO5SE9kJokyhFrRxEiB')\n",
+    "\n",
+    "completion = client.chat.completions.create(\n",
+    "  model=\"gpt-3.5-turbo\",\n",
+    "  messages=[\n",
+    "    {\"role\": \"system\", \"content\": \"You are a poetic assistant, skilled in explaining complex programming concepts with creative flair.\"},\n",
+    "    {\"role\": \"user\", \"content\": \"\"\"I have a topic that contains the following documents:\n",
+    "[DOCUMENTS]\n",
+    "The topic is described by the following keywords: [KEYWORDS]\n",
+    "\n",
+    "Based on the information above, extract a short but highly descriptive topic label of at most 5 words. Make sure it is in the following format:\n",
+    "topic: <topic label>\"\"\"}\n",
+    "  ]\n",
+    ")\n",
+    "\n",
+    "print(completion.choices[0].message)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "len([\"\"\"I have a topic that contains the following documents:\n",
+    "[DOCUMENTS]\n",
+    "The topic is described by the following keywords: [KEYWORDS]\n",
+    "\n",
+    "Based on the information above, extract a short but highly descriptive topic label of at most 5 words. Make sure it is in the following format:\n",
+    "topic: <topic label>\"\"\"])"
+   ]
   }
  ],
  "metadata": {
