--- a/bert/00_crawl_researvedwords.ipynb
+++ b/bert/00_crawl_researvedwords.ipynb
@@ -116,7 +116,8 @@
     "'as',                  'elif',                'in',                  'try',\n",
     "'assert',              'else',                'is',                  'while',\n",
     "'async',               'except',              'lambda',              'with',\n",
-    "'await',               'finally',             'nonlocal',            'yield'\n",
+    "'await',               'finally',             'nonlocal',            'yield',\n",
+    "'quot' ,                'lt',                 'gt'\n",
     "\n",
     "]"
    ]
