--- a/bert/0_data_extract.ipynb
+++ b/bert/0_data_extract.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,230 +155,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>q_id</th>\n",
-       "      <th>q_posttypeid</th>\n",
-       "      <th>q_acceptedanswerid</th>\n",
-       "      <th>q_parentid</th>\n",
-       "      <th>q_creationdate</th>\n",
-       "      <th>q_score</th>\n",
-       "      <th>q_viewcount</th>\n",
-       "      <th>q_owneruserid</th>\n",
-       "      <th>q_title</th>\n",
-       "      <th>q_tags</th>\n",
-       "      <th>...</th>\n",
-       "      <th>a_creationdate</th>\n",
-       "      <th>a_score</th>\n",
-       "      <th>a_viewcount</th>\n",
-       "      <th>a_owneruserid</th>\n",
-       "      <th>a_title</th>\n",
-       "      <th>a_tags</th>\n",
-       "      <th>a_answercount</th>\n",
-       "      <th>a_commentcount</th>\n",
-       "      <th>a_reputation</th>\n",
-       "      <th>a_text</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>77593805</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2023-12-03 10:05:29.263</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>19</td>\n",
-       "      <td>23031413</td>\n",
-       "      <td>how to add number from 1 t0 20000 in python pr...</td>\n",
-       "      <td>python</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2023-12-03 10:11:55.577</td>\n",
-       "      <td>0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>14923149</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0</td>\n",
-       "      <td>381</td>\n",
-       "      <td>&lt;p&gt;You can use the formula for the sum of an a...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>77593717</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2023-12-03 09:35:22.270</td>\n",
-       "      <td>0</td>\n",
-       "      <td>28</td>\n",
-       "      <td>23031346</td>\n",
-       "      <td>my python dehashing algoritm doesn't work</td>\n",
-       "      <td>python hash</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2023-12-03 10:11:57.450</td>\n",
-       "      <td>0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>17580381</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0</td>\n",
-       "      <td>21143</td>\n",
-       "      <td>&lt;p&gt;A different structure to your code may help...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>77591118</td>\n",
-       "      <td>1</td>\n",
-       "      <td>77591163.0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2023-12-02 16:07:09.687</td>\n",
-       "      <td>1</td>\n",
-       "      <td>23</td>\n",
-       "      <td>5449454</td>\n",
-       "      <td>Pandas Series: split, modify first, join</td>\n",
-       "      <td>python pandas series</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2023-12-02 16:18:48.427</td>\n",
-       "      <td>2</td>\n",
-       "      <td>None</td>\n",
-       "      <td>3185459</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>1</td>\n",
-       "      <td>91367</td>\n",
-       "      <td>&lt;p&gt;Use a single regex substitution instead:&lt;/p...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>77590853</td>\n",
-       "      <td>1</td>\n",
-       "      <td>77591168.0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2023-12-02 14:54:18.170</td>\n",
-       "      <td>-2</td>\n",
-       "      <td>37</td>\n",
-       "      <td>21429315</td>\n",
-       "      <td>Python3 Nmap-APİ</td>\n",
-       "      <td>python nmap</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2023-12-02 16:19:08.763</td>\n",
-       "      <td>0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>19998536</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0</td>\n",
-       "      <td>12</td>\n",
-       "      <td>&lt;p&gt;Make sure to install the python-nmap librar...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>77591142</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2023-12-02 16:14:58.957</td>\n",
-       "      <td>-4</td>\n",
-       "      <td>69</td>\n",
-       "      <td>22834840</td>\n",
-       "      <td>How to check whether a string is Palindrome or...</td>\n",
-       "      <td>python</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2023-12-02 16:19:24.450</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>None</td>\n",
-       "      <td>15261315</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>1</td>\n",
-       "      <td>29096</td>\n",
-       "      <td>&lt;p&gt;No code because no attempt has been shown, ...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 28 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       q_id q_posttypeid  q_acceptedanswerid q_parentid  \\\n",
-       "0  77593805            1                 NaN       None   \n",
-       "1  77593717            1                 NaN       None   \n",
-       "2  77591118            1          77591163.0       None   \n",
-       "3  77590853            1          77591168.0       None   \n",
-       "4  77591142            1                 NaN       None   \n",
-       "\n",
-       "           q_creationdate  q_score  q_viewcount  q_owneruserid  \\\n",
-       "0 2023-12-03 10:05:29.263       -1           19       23031413   \n",
-       "1 2023-12-03 09:35:22.270        0           28       23031346   \n",
-       "2 2023-12-02 16:07:09.687        1           23        5449454   \n",
-       "3 2023-12-02 14:54:18.170       -2           37       21429315   \n",
-       "4 2023-12-02 16:14:58.957       -4           69       22834840   \n",
-       "\n",
-       "                                             q_title                 q_tags  \\\n",
-       "0  how to add number from 1 t0 20000 in python pr...                python    \n",
-       "1          my python dehashing algoritm doesn't work           python hash    \n",
-       "2           Pandas Series: split, modify first, join  python pandas series    \n",
-       "3                                   Python3 Nmap-APİ           python nmap    \n",
-       "4  How to check whether a string is Palindrome or...                python    \n",
-       "\n",
-       "   ...          a_creationdate  a_score  a_viewcount a_owneruserid  a_title  \\\n",
-       "0  ... 2023-12-03 10:11:55.577        0         None      14923149     None   \n",
-       "1  ... 2023-12-03 10:11:57.450        0         None      17580381     None   \n",
-       "2  ... 2023-12-02 16:18:48.427        2         None       3185459     None   \n",
-       "3  ... 2023-12-02 16:19:08.763        0         None      19998536     None   \n",
-       "4  ... 2023-12-02 16:19:24.450       -1         None      15261315     None   \n",
-       "\n",
-       "  a_tags a_answercount  a_commentcount a_reputation  \\\n",
-       "0   None          None               0          381   \n",
-       "1   None          None               0        21143   \n",
-       "2   None          None               1        91367   \n",
-       "3   None          None               0           12   \n",
-       "4   None          None               1        29096   \n",
-       "\n",
-       "                                              a_text  \n",
-       "0  <p>You can use the formula for the sum of an a...  \n",
-       "1  <p>A different structure to your code may help...  \n",
-       "2  <p>Use a single regex substitution instead:</p...  \n",
-       "3  <p>Make sure to install the python-nmap librar...  \n",
-       "4  <p>No code because no attempt has been shown, ...  \n",
-       "\n",
-       "[5 rows x 28 columns]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 전체 데이터셋 \n",
     "with open('../../data/bert_df.pkl', 'wb') as f:\n",
@@ -387,18 +166,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2023-11-17 00:01:50.710000\n",
-      "2023-12-03 10:11:57.450000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(df['q_creationdate'].min())\n",
     "print(df['a_creationdate'].max())"
@@ -406,28 +176,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'psycopg2' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m conn \u001b[38;5;241m=\u001b[39m \u001b[43mpsycopg2\u001b[49m\u001b[38;5;241m.\u001b[39mconnect(host \u001b[38;5;241m=\u001b[39m conf\u001b[38;5;241m.\u001b[39mdatabase_user[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhost\u001b[39m\u001b[38;5;124m'\u001b[39m], dbname\u001b[38;5;241m=\u001b[39mconf\u001b[38;5;241m.\u001b[39mdatabase_user[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdbname\u001b[39m\u001b[38;5;124m'\u001b[39m], user\u001b[38;5;241m=\u001b[39mconf\u001b[38;5;241m.\u001b[39mdatabase_user[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124muser\u001b[39m\u001b[38;5;124m'\u001b[39m], password\u001b[38;5;241m=\u001b[39mconf\u001b[38;5;241m.\u001b[39mdatabase_user[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpassword\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m      3\u001b[0m     cur \u001b[38;5;241m=\u001b[39m conn\u001b[38;5;241m.\u001b[39mcursor()\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'psycopg2' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "conn = psycopg2.connect(host = conf.database_user['host'], dbname=conf.database_user['dbname'], user=conf.database_user['user'], password=conf.database_user['password'])\n",
     "try:\n",
     "    cur = conn.cursor()\n",
     "    cur.execute(\"\\\n",
     "select a.q_id, a.a_id, a.q_creationdate, c.tags, b.body \\\n",
-    "  from tt_qna_240506 a \\\n",
+    "  from ( \\\n",
+    "  select q_id, q_creationdate, max(a_id) as a_id \\\n",
+    "  from tt_qna_240506 \\\n",
+    " group by q_id, q_creationdate ) a \\\n",
     "     , postsbody b \\\n",
     "     , posts c \\\n",
     "where a.q_id = b.id \\\n",
@@ -446,13 +207,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.DataFrame(rows, columns = [\n",
     "  'q_id' \n",
-    ", 'a_id' \n",
+    ", 'a_id'\n",
     ", 'q_creationdate'\n",
     ", 'tags' \n",
     ", 'body' \n",
@@ -461,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,6 +255,101 @@
     "# LEFT JOIN posts b ON \n",
     "# \tx.q_id = b.parentid \n",
     "# ;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn = psycopg2.connect(host = conf.database_user['host'], dbname=conf.database_user['dbname'], user=conf.database_user['user'], password=conf.database_user['password'])\n",
+    "try:\n",
+    "    cur = conn.cursor()\n",
+    "    cur.execute(\"\\\n",
+    "select a.q_id, a.a_id, a.q_creationdate, c.tags, b.body \\\n",
+    "  from tt_qna_240506 a \\\n",
+    "     , postsbody b \\\n",
+    "     , posts c \\\n",
+    "where a.q_id = b.id \\\n",
+    "  and a.q_id = c.id \\\n",
+    "; \\\n",
+    "                \" \n",
+    "   )\n",
+    "    rows = cur.fetchall()\n",
+    "    \n",
+    "\n",
+    "except psycopg2.DatabaseError as db_err:\n",
+    "    print(db_err)\n",
+    "finally : \n",
+    "  cur.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn = psycopg2.connect(host = conf.database_user['host'], dbname=conf.database_user['dbname'], user=conf.database_user['user'], password=conf.database_user['password'])\n",
+    "try:\n",
+    "    cur = conn.cursor()\n",
+    "    cur.execute(\"\\\n",
+    "select b.owneruserid as ans_usr_id \\\n",
+    "     , a.creationdate as q_date \\\n",
+    "     , b.creationdate as a_date \\\n",
+    "\t , a.id as q_id \\\n",
+    "\t , b.id as a_id \\\n",
+    "     , c.body as question_body \\\n",
+    "     , d.body as answer_body \\\n",
+    "  from posts a \\\n",
+    "     , posts b \\\n",
+    "     , postsbody c \\\n",
+    "     , postsbody d \\\n",
+    " where a.creationdate between '20221101' and '20221231' \\\n",
+    "   and a.posttypeid = '1' \\\n",
+    "   and a.id = b.parentid \\\n",
+    "   and a.id = c.id \\\n",
+    "   and b.id = d.id \\\n",
+    "; \\\n",
+    "                \" \n",
+    "   )\n",
+    "    rows = cur.fetchall()\n",
+    "    \n",
+    "\n",
+    "except psycopg2.DatabaseError as db_err:\n",
+    "    print(db_err)\n",
+    "finally : \n",
+    "  cur.close()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(rows, columns = [\n",
+    "  'ans_usr_id' \n",
+    ", 'q_creationdate'\n",
+    ", 'a_creationdate'\n",
+    ", 'q_id'\n",
+    ", 'a_id'\n",
+    ", 'question_body' \n",
+    ", 'answer_body' \n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 전체 데이터셋 \n",
+    "with open('../../data/bert_qna_body.pkl', 'wb') as f:\n",
+    "    pickle.dump(df, f)"
    ]
   },
   {
