--- a/bert/1_test.ipynb
+++ b/bert/1_test.ipynb
@@ -710,14 +710,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ChatCompletionMessage(content=\"In the realm of code where functions play,\\nA concept dwells to light the way.\\nRecursion dances, a loop sublime,\\nA mystical spell through space and time.\\n\\nLike echoes in a vast cavern's hall,\\nRecursive functions heed the call.\\nThey call themselves, a mirror's trance,\\nRepeating steps in a graceful dance.\\n\\nThink of a tree with branches wide,\\nEach branch a call to another side.\\nA function calling itself to explore,\\nA recursive journey, forevermore.\\n\\nAs a tale within a tale unfolds,\\nRecursion's magic creation molds.\\nA loop of mystery, elegant and clear,\\nUnraveling problems far and near.\\n\\nYet beware, as dangers lurk unseen,\\nInfinite loops can be quite mean.\\nBase case, the anchor to the shore,\\nGuide the recursion, and run no more.\\n\\nSo in the land of code and quest,\\nRecursion shines as a noble guest.\\nA poetic loop, a symphony grand,\\nIn the programmer's skilled hand.\", role='assistant', function_call=None, tool_calls=None)\n"
+      "ChatCompletionMessage(content='topic: Document Clustering Algorithm', role='assistant', function_call=None, tool_calls=None)\n"
      ]
     }
    ],
